  font ascent/descent rather than the values specific to the string.
- supplying align=>0 to the win32 font driver string() function 
  now aligns in the same way as the other drivers.
- removed the bug reporting email address to prevent spammers stripping
  it.  The URL is still there and if someone knows how rt.cpan.org works
  they can still figure out the email.
- the internal function used to probe file formats if the type
  parameter wasn't passed to the read() method would produce
  diagnostics on stdout, precluding use in web applications.  Silenced
  it.
- the setcolors() had a fencepost error making it impossible to 
  use it to set the last color in the palette.
  http://rt.cpan.org/NoAuth/Bug.html?id=12676
- fix the filter examples in Imager::Filter so they don't indicate that 
  a new image is returned (the filter() method works in-place)
- add examples for the fountain filter
- prevent warnings from Makefile.PL when there's no libraries found
- Imager no longer assumes that MSVC is the only native Win32 
  compiler, MinGW can be used to build Imager.
- fixed an inverted condition checking the giflib version, and 
  replaced a manual test skip in t/t105gif.t
- add tests to exercise hatch fills for floating images.  This code is
  mis-generated with the gcc 4.0 that ships with OS X 10.4
- work around junk that pkg-config sends to stderr on FreeBSD 4.10
- testimg/base.jpg was missing from the MANIFEST, causing test failures
- use a temp file to avoid messing with echo on Win32 when building
  META.yml
- add some Mac OS X notes to the README

0.45 Mon 30 May 2005
- t/t105gif.t wasn't handling buggy giflibs correctly

0.45_01
- give the colorcount() and maxcolors() methods their own entries and
  add them to the method index.

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
