@@ -1,7 +1,7 @@
 #!perl -w
 use strict;
 use lib 't';
-use Test::More tests => 77;
+use Test::More tests => 81;
 use Imager qw(:all);
 $^W=1; # warnings during command-line tests
 $|=1;  # give us some progress in the test harness
@@ -32,7 +32,7 @@ SKIP:
     $im = Imager->new(xsize=>2, ysize=>2);
     ok(!$im->write(file=>"testout/notiff.tif"), "should fail to write tiff");
     is($im->errstr, 'format not supported', "check no tiff message");
-    skip("no tiff support", 73);
+    skip("no tiff support", 77);
   }
 
   Imager::i_tags_add($img, "i_xres", 0, "300", 0);
@@ -65,6 +65,8 @@ SKIP:
   ok(abs($tags{i_yres} - 250) < 0.5, "i_yres in range");
   is($tags{tiff_resolutionunit}, 3, "tiff_resolutionunit");
   is($tags{tiff_software}, 't106tiff.t', "tiff_software");
+  is($tags{tiff_photometric}, 2, "tiff_photometric"); # PHOTOMETRIC_RGB is 2
+  is($tags{tiff_bitspersample}, 8, "tiff_bitspersample");
 
   $IO = Imager::io_new_bufchain();
   
@@ -119,6 +121,8 @@ SKIP:
   ok(!$tags{i_aspect_only}, "i_aspect_only");
   # resunit_inches
   is($tags{tiff_resolutionunit}, 2, "tiff_resolutionunit");
+  is($tags{tiff_bitspersample}, 1, "tiff_bitspersample");
+  is($tags{tiff_photometric}, 1, "tiff_photometric");
 
   ok($oofim->write(file=>'testout/t106_oo_fax.tiff', class=>'fax'),
      "write OO, faxable");
